# mdX

./: .gitignore  LICENSE  README.md  register-file-assoc.reg
public/: app.bundle.js  app.js  bundle.cmd  index.html  markdown-slim.js  package-lock.json  package.json  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
