[package]
name = "mdx"
version = "0.1.2"
description = "A local Markdown editor built with Tauri"
edition = "2021"

[lib]
name = "mdx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `custom-protocol` 必须开启,否则 release build 仍会按 dev 模式去加载 devUrl
# (Tauri 的 build.rs:`let dev = !custom_protocol`)。`cargo tauri build` 会
# 自动加这个 feature,但我们直接 `cargo build --release` 走快速通道,
# 必须显式声明。
tauri = { version = "2", features = ["custom-protocol"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
syntect = "5.3.0"
tauri-plugin-dialog = "2.7.1"
chrono = "0.4.44"
walkdir = "2.5.0"
dirs = "6.0.0"

[profile.release]
opt-level = 2
codegen-units = 1
incremental = false
lto = true
debug = false
strip = "symbols"

[profile.release.package."*"]
opt-level = 2
